// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`groups itemsForDay that come in on prop changes 1`] = `
<div
  className="Day-styles__root planner-day"
>
  <Heading
    border="none"
    color="inherit"
    level="h2"
  >
    <div
      className="Day-styles__secondary"
    >
      Tuesday
      , 
      April 25, 2017
    </div>
  </Heading>
  <div>
    <Animatable(ResponsiveGrouping)
      animatableIndex={1}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "context": Object {
              "id": 128,
              "type": "Course",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "Black Friday",
          },
        ]
      }
      key="Course128"
      simplifiedControls={false}
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
    />
    <Animatable(ResponsiveGrouping)
      animatableIndex={2}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "context": Object {
              "id": 256,
              "type": "Course",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "San Juan",
          },
        ]
      }
      key="Course256"
      simplifiedControls={false}
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
    />
  </div>
</div>
`;

exports[`groups itemsForDay that come in on prop changes 2`] = `
<div
  className="Day-styles__root planner-day"
>
  <Heading
    border="none"
    color="inherit"
    level="h2"
  >
    <div
      className="Day-styles__secondary"
    >
      Tuesday
      , 
      April 25, 2017
    </div>
  </Heading>
  <div>
    <Animatable(ResponsiveGrouping)
      animatableIndex={1}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "context": Object {
              "id": 128,
              "type": "Course",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "Black Friday",
          },
        ]
      }
      key="Course128"
      simplifiedControls={false}
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
    />
    <Animatable(ResponsiveGrouping)
      animatableIndex={2}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "context": Object {
              "id": 256,
              "type": "Course",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "San Juan",
          },
          Object {
            "context": Object {
              "id": 256,
              "type": "Course",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "Roll for the Galaxy",
          },
        ]
      }
      key="Course256"
      simplifiedControls={false}
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
    />
    <Animatable(ResponsiveGrouping)
      animatableIndex={3}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "title": "Get work done!",
          },
        ]
      }
      key="Notes"
      simplifiedControls={false}
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
    />
  </div>
</div>
`;

exports[`groups itemsForDay that have no context into the "Notes" category 1`] = `
<div
  className="Day-styles__root planner-day"
>
  <Heading
    border="none"
    color="inherit"
    level="h2"
  >
    <div
      className="Day-styles__secondary"
    >
      Tuesday
      , 
      April 25, 2017
    </div>
  </Heading>
  <div>
    <Animatable(ResponsiveGrouping)
      animatableIndex={1}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "context": Object {
              "id": 128,
              "type": "Course",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "Black Friday",
          },
        ]
      }
      key="Course128"
      simplifiedControls={false}
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
    />
    <Animatable(ResponsiveGrouping)
      animatableIndex={2}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "context": Object {
              "id": 256,
              "type": "Course",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "San Juan",
          },
          Object {
            "context": Object {
              "id": 256,
              "type": "Course",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "Roll for the Galaxy",
          },
        ]
      }
      key="Course256"
      simplifiedControls={false}
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
    />
    <Animatable(ResponsiveGrouping)
      animatableIndex={3}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "title": "Get work done!",
          },
        ]
      }
      key="Notes"
      simplifiedControls={false}
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
    />
  </div>
</div>
`;

exports[`renders grouping correctly when having itemsForDay 1`] = `
<div
  className="Day-styles__root planner-day"
>
  <Heading
    border="none"
    color="inherit"
    level="h2"
  >
    <div
      className="Day-styles__secondary"
    >
      Tuesday
      , 
      April 25, 2017
    </div>
  </Heading>
  <div>
    <Animatable(ResponsiveGrouping)
      animatableIndex={101}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "context": Object {
              "id": 128,
              "type": "Course",
              "url": "http://www.non_default_url.com",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "Black Friday",
          },
        ]
      }
      key="Course128"
      simplifiedControls={false}
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
      url="http://www.non_default_url.com"
    />
    <Animatable(ResponsiveGrouping)
      animatableIndex={102}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "context": Object {
              "id": 256,
              "type": "Course",
              "url": "http://www.non_default_url.com",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "San Juan",
          },
          Object {
            "context": Object {
              "id": 256,
              "type": "Course",
              "url": "http://www.non_default_url.com",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "Roll for the Galaxy",
          },
        ]
      }
      key="Course256"
      simplifiedControls={false}
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
      url="http://www.non_default_url.com"
    />
    <Animatable(ResponsiveGrouping)
      animatableIndex={103}
      color="#00AC18"
      currentUser={
        Object {
          "avatarUrl": "/picture/is/here",
          "color": "#00AC18",
          "displayName": "Jane",
          "id": "1",
        }
      }
      items={
        Array [
          Object {
            "context": Object {
              "id": 256,
              "type": "Group",
            },
            "date": "2017-04-25T23:59:00.000Z",
            "title": "Same id, different type",
          },
        ]
      }
      key="Group256"
      simplifiedControls={false}
      theme={
        Object {
          "titleColor": "#00AC18",
        }
      }
      timeZone="America/Denver"
    />
  </div>
</div>
`;

exports[`renders the base component with required props 1`] = `
<div
  className="Day-styles__root planner-day"
>
  <Heading
    border="bottom"
    color="inherit"
    level="h2"
  >
    <div
      className="Day-styles__secondary"
    >
      Tuesday
      , 
      April 25, 2017
    </div>
  </Heading>
  <div>
    <View
      borderColor="primary"
      display="block"
      focusColor="info"
      focusPosition="offset"
      margin="small 0 0 0"
      overflowX="visible"
      overflowY="visible"
      position="static"
      shouldAnimateFocus={true}
      textAlign="center"
      withVisualDebug={false}
    >
      Nothing Planned Yet
    </View>
  </div>
</div>
`;
